--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,64 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world! This is reversi about to change the world.</h1>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #FFFCF3;
+    }
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    .bottom-logo {
+      background-color: darkseagreen;
+    }
+  </style>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+  <title>Reversi</title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row m-3">
+      <div class="col text-center">
+        <a class="btn btn-success text-nowrap" href="about.html">About</a>
+      </div>
+      <div class="col text-center">
+        <a class="btn btn-success text-nowrap" href="https://en.wikipedia.org/wiki/Reversi" target="_blank">Rules</a>
+      </div>
+    </div>
+    <div class="row m-3">
+      <div class="col text-center">
+        <img class="img-fluid" src="assets/images/top-splash.png" alt="Reversi Logo 1" />
+      </div>
+    </div>
+
+    <div class="row align-items-center justify-content-center m-3">
+      <div class="col-8">
+        <div class="input-group">
+          <span class="input-group-text" id="displayName">Name</span>
+          <input type="text" class="form-control text-nowrap" id="nameInput" placeholder="Choose your display name"
+            aria-label="Enter your display name for use while playing Reversi" aria-describeby="displayName"/>
+          <button type="submit" class="btn btn-primary text-nowrap" id="lobbyButton"
+            onclick="window.location='lobby.html'">Enter Lobby</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col text-center">
+        <img class="img-fluid" src="assets/images/bottom-splash.png" alt="Reversi Logo 1" />
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
