--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
       background-color: darkseagreen;
     }
   </style>
+  <script>
+    function goToLobby(){
+      let username = $('#nameInput').val();
+      // check if username is undefined, null, or empty space
+      if ((typeof username == 'undefined') || (username === null) || (!username.trim())) {
+        username = "Anonymous_"+Math.floor(Math.random()*1000);
+      }
+      window.location.href = "lobby.html?username="+username;
+    }
+  </script>
 
   <title>Reversi</title>
 </head>
@@ -45,7 +55,7 @@
           <input type="text" class="form-control text-nowrap" id="nameInput" placeholder="Choose your display name"
             aria-label="Enter your display name for use while playing Reversi" aria-describeby="displayName"/>
           <button type="submit" class="btn btn-primary text-nowrap" id="lobbyButton"
-            onclick="window.location='lobby.html'">Enter Lobby</button>
+            onclick="goToLobby()">Enter Lobby</button>
         </div>
       </div>
     </div>
@@ -59,6 +69,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
 </body>
 
 </html>
