--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,18 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <style>
     body {
-      background-color: #FFFCF3;
+      /* background-color: #FFFCF3; */
+      background-color: white;
     }
 
     .bottom-logo {
       background-color: darkseagreen;
     }
+
+    .top_splash {
+      width: 770px;
+    }
+
   </style>
   <script>
     function goToLobby(){
@@ -44,17 +50,17 @@
     </div>
     <div class="row m-3">
       <div class="col text-center">
-        <img class="img-fluid" src="assets/images/top-splash.png" alt="Reversi Logo 1" />
+        <img class="img-fluid top_splash" src="assets/images/top-splash.png" alt="Reversi Logo 1" />
       </div>
     </div>
 
     <div class="row align-items-center justify-content-center m-3">
-      <div class="col-8">
+      <div class="col-12 col-sm-12 col-md-10 col-lg-8 col-xl-6">
         <div class="input-group">
           <span class="input-group-text" id="displayName">Name</span>
           <input type="text" class="form-control text-nowrap" id="nameInput" placeholder="Choose your display name"
             aria-label="Enter your display name for use while playing Reversi" aria-describeby="displayName"/>
-          <button type="submit" class="btn btn-primary text-nowrap" id="lobbyButton"
+          <button type="submit" class="btn btn-success text-nowrap" id="lobbyButton"
             onclick="goToLobby()">Enter Lobby</button>
         </div>
       </div>
@@ -65,7 +71,16 @@
         <img class="img-fluid" src="assets/images/bottom-splash.png" alt="Reversi Logo 1" />
       </div>
     </div>
+    <br>
   </div>
+  <script>
+    // user enters the lobby room by clickiing "enter"
+    document.getElementById("nameInput").addEventListener("keypress", function(e) {
+    if (e.key === "Enter") {
+        e.preventDefault();
+        document.getElementById("lobbyButton").click();
+    }});
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
