--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,6 @@
     }
 
   </style>
-  <script>
-    function goToLobby(){
-      let username = encodeURI($('#nameInput').val());
-      // check if username is undefined, null, or empty space
-      if ((typeof username == 'undefined') || (username === null) || (!username.trim())) {
-        username = "Anonymous_"+Math.floor(Math.random()*1000);
-      }
-      window.location.href = "lobby.html?username="+username;
-    }
-  </script>
 
   <title>Reversi</title>
 </head>
@@ -73,18 +63,28 @@
     </div>
     <br>
   </div>
-  <script>
-    // user enters the lobby room by clickiing "enter"
-    document.getElementById("nameInput").addEventListener("keypress", function(e) {
-    if (e.key === "Enter") {
-        e.preventDefault();
-        document.getElementById("lobbyButton").click();
-    }});
-  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
+  <script>
+    function goToLobby(){
+      let username = encodeURI($('#nameInput').val());
+      // check if username is undefined, null, or empty space
+      if ((typeof username == 'undefined') || (username === null) || (!username.trim())) {
+        username = "Anonymous_"+Math.floor(Math.random()*1000);
+      }
+      window.location.href = "lobby.html?username="+username;
+    }
+    // user enters the lobby room by clickiing "enter"
+    $('#nameInput').keypress(function(e) {
+      let key = e.which;
+      if (key == 13) { //the enter key
+        $('button[id = lobbyButton]').click();
+        return false;
+      }
+    })
+  </script>
 </body>
 
 </html>
