--- a/public/lobby.html
+++ b/public/lobby.html
@@ -13,9 +13,14 @@
     .headerrow {
       background-color: darkseagreen;
     }
-    .join_room_response {
-      background-color: rgb(223, 224, 223);
-      margin: 1px 1px 1px 10px;
+
+    #messagePane{
+      background-color: rgb(224, 243, 224);
+    }
+
+    .join_room_response,
+    .left_room_response {
+      background-color: rgb(247, 247, 247);
     }
     .chat_message {
       font-size: 120%;
@@ -30,10 +35,11 @@
       width: 55px;
       height: 10%;
       margin-right: 10px;
+      vertical-align: top;
     }
     .message_group {
       flex-wrap: wrap;
-      max-width: 90%;
+      max-width: 100%;
     }
     .message_user {
       overflow-wrap: break-word;
@@ -41,6 +47,10 @@
       word-wrap: break-word;
       flex-wrap: wrap;
       font-weight: 500;
+    }
+
+    .string_container {
+      display: inline-block;
     }
 
     
@@ -53,28 +63,37 @@
   <div class="container-fluid">
     <div class="row m-3 headerrow">
       <div class="col text-center">
-        <h3 class="title_lobby pt-2">Lobby</h3>
+        <h3 class="title_lobby pt-2" id="lobbyTitle">Lobby</h3>
       </div>
     </div>
 
     <div class="row m-3">
       <div class="col">
-        <div class="row align-items-center justify-content-center m-3">
-          <div class="col-12 col-sm-12 col-md-10 col-lg-8 col-xl-6">
-              Pick Profile Color:
+        <div class="row align-items-start justify-content-center">
+          <div class="col-md-4">
+            <h4>Players</h4>
+            <div id="players" class="align-items-end text-right m-3">
+            </div>
+
+          </div>
+          <div class="col-md-8" id="messagePane">
+            <div>
+              <h4>Messages</h4>
+            </div>
+            Pick Profile Color:
                 <button class="btn bg-transparent" onclick="pickColor('green')"><img class="img-fluid" src="assets/images/green-button.png"></button>
                 <button class="btn bg-transparent" onclick="pickColor('purple')"><img class="img-fluid" src="assets/images/purple-button.png"></button>
                 <button class="btn bg-transparent" onclick="pickColor('brown')"><img class="img-fluid" src="assets/images/brown-button.png"></button>
                 <button class="btn bg-transparent" onclick="pickColor('black')"><img class="img-fluid" src="assets/images/black-button.png"></button>
-            <br>
-            <div class="input-group mt-3">
+            <div class="input-group">
               <input type="text" class="form-control text-nowrap" id="chatMessage" placeholder="Enter your message here" aria-label="Enter your message to send to the chat room" onkeyup="textEnable()"/>
               <button type="submit" class="btn btn-success text-nowrap" id="chatButton" onclick="sendChatMessage()" disabled>Send</button>
+              <!-- <input type="text" class="form-control text-nowrap" id="chatMessage" placeholder="Enter your message here" aria-label="Enter your message to send to the chat room"/>
+              <button type="submit" class="btn btn-success text-nowrap" id="chatButton" onclick="sendChatMessage()">Send</button> -->
+            </div>
+            <div id="messages" class="mt-3">
             </div>
           </div>
-        </div>
-        <h4>Messages</h4>
-        <div id="messages">
         </div>
       </div>
     </div>
@@ -82,8 +101,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
-  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" 
+    integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" 
+    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.3/jquery-ui.min.js" 
+    integrity="sha384-oVpH0DXO9nadZxTmPSQo3YwWqfN/Up9aRDHCxLrw8A2LjkFNcM/XILw4KGMaL95z" 
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" 
+    integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" 
+    crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
