--- a/public/game.html
+++ b/public/game.html
@@ -31,12 +31,20 @@
 
     <div class="row m-3">
       <div class="col-md-7 text-center justify-content-center">
-        <h3 id="my_color">My Color</h3><br/>
-        <img class="img-fluid" src="assets/images/white.gif" alt="White Score"/>
-        <span id="whitesum">White Sum</span>
-        <span id="vs">vs</span>
-        <span id="blacksum">Black Sum</span>
-        <img class="img-fluid" src="assets/images/black.gif" alt="Black Score"/>
+        <h3 id="my_color" class="mt-2">My Color</h3>
+        <div class="d-flex text-center justify-content-center align-items-center score_con">
+          <div class="score_bd border_circle">
+            <img class="img-fluid score_bd" src="assets/images/white.gif" alt="White Score"/>
+            <span id="whitesum">White Sum</span>
+          </div>
+          <span id="vs">vs</span>
+          <div class="score_bd border_circle">
+            <img class="img-fluid score_bd" src="assets/images/black.gif" alt="Black Score"/>
+            <span id="blacksum">Black Sum</span>
+          </div>
+
+        </div>
+        
       </div>
       <div class="col-md-5 text-end justify-content-end">
         <div id="quit">Quit Button</div>
@@ -47,12 +55,13 @@
       <div class="col">
         <div class="row align-items-start justify-content-center">
           <div class="col-md-7 table-responsive">
-            <div class="progress">
-              <div id="elapsed" class="progress-bar progress-bar-animated progress-bar-striped
-              bg-success" role="progressbar" style="width:0%;" aria-valuenow="0" aria-valuemin="0"
-              aria-valuemax="100"></div>
+            <div class="progress" style='border-radius: 10px'>
+              <div id="elapsed" 
+              class="progress-bar progress-bar-animated progress-bar-striped
+              bg-success" role="progressbar" style="width: 0%; border-radius: 10px"
+              aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <table id="game_board" class="mx-auto w-auto">
+            <table id="game_board" class="mx-auto w-auto mt-2">
               <tr>
                 <td id="0_0"><img class="img-fluid" src="assets/images/empty.gif" alt="empty"/></td>
                 <td id="0_1"><img class="img-fluid" src="assets/images/empty.gif" alt="empty"/></td>
@@ -140,12 +149,12 @@
             <div>
               <h4 class="pt-2">Messages</h4>
             </div>
-            Pick Profile Color:
+            Change Profile Color:
             <div class="d-flex text-nowrap">
-                <button class="btn bg-transparent" onclick="pickColor('green')"><img class="img-fluid" src="assets/images/green-button.png"></button>
-                <button class="btn bg-transparent" onclick="pickColor('purple')"><img class="img-fluid" src="assets/images/purple-button.png"></button>
-                <button class="btn bg-transparent" onclick="pickColor('brown')"><img class="img-fluid" src="assets/images/brown-button.png"></button>
-                <button class="btn bg-transparent" onclick="pickColor('black')"><img class="img-fluid" src="assets/images/black-button.png"></button>
+                <button id="p_green" class="profile_color btn btn-lg" onclick="pickColor('green')"><img class="img-fluid align-items-center" src="assets/images/green-button.png" alt="green"></button>
+                <button id="p_purple"class="profile_color btn btn-lg" onclick="pickColor('purple')"><img class="img-fluid align-items-center" src="assets/images/purple-button.png" alt="purple"></button>
+                <button id="p_brown" class="profile_color btn btn-lg" onclick="pickColor('brown')"><img class="img-fluid align-items-center" src="assets/images/brown-button.png"  alt="brown"></button>
+                <button id="p_black" class="profile_color btn btn-lg active" onclick="pickColor('black')"><img class="img-fluid align-items-center" src="assets/images/black-button.png" alt="black"></button>
             </div>
             <div class="input-group mt-2">
               <input type="text" class="form-control text-nowrap" id="chatMessage" placeholder="Enter your message here" aria-label="Enter your message to send to the chat room" onkeyup="textEnable()"/>
@@ -157,6 +166,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
